compiler/tools/fpp-check/test/connection_pattern/param_missing_target_port.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/connection_pattern/param_missing_target_port.fpp: 18.45
    param connections instance parameters { c }
                                            ^
error: instance c has no param get port
